# college-TODO

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dependecy.py  docker-compose.yml  exception.py  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 0b9f3f5d6c2a_unique_userprofile_username.py  181361ce1714_baseline_schema.py  3a51c85e4e33_task_metadata.py  b7d0b0a1c2f3_task_importance.py
client/: google.py
database/: accessor.py  database.py
handlers/: __init__.py  auth.py  notes.py  ping.py  tasks.py  ui.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  task.py  user.py
schema/: __init__.py  note.py  task.py
service/: __init__.py  auth.py  note.py  task.py  user.py
static/: script.js  style.css  theme.js
templates/: index.html  note.html
